Remove final Jackson usage in source code